Fixing decorators formatting.

--- a/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
+++ b/javascript2.editor/src/org/netbeans/modules/javascript2/editor/formatter/ui/Bundle.properties
@@ -314,3 +314,4 @@ FmtBlankLines.maximumLabel.text=Maximum Preserved Blank Lines
 FmtBlankLines.maxClassLabel.text=In Class Declarations:
 FmtBlankLines.maxObjectLabel.text=In Object Declarations:
 FmtBlankLines.maxArrayLabel.text=In Array Declarations:
+FmtWrapping.decoratorsLabel.text=Decorator&s:
