fixed minor typos in license headers

--- a/css.editor/src/org/netbeans/modules/css/editor/module/main/browsers/webkit.properties
+++ b/css.editor/src/org/netbeans/modules/css/editor/module/main/browsers/webkit.properties
@@ -36,7 +36,7 @@
 #
 # Contributor(s)
 #
-# Portions Copyrighted 2011 Sun Microsystems, Inc
+# Portions Copyrighted 2011 Sun Microsystems, Inc.
 #
 #-------------------------------------------------------------------------------
 #
