--- a/openide.awt/src/org/openide/awt/Mnemonics.properties
+++ b/openide.awt/src/org/openide/awt/Mnemonics.properties
@@ -39,8 +39,8 @@
 # However, if you add GPL Version 2 code and therefore, elected the GPL
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
-#
-# Contributors: Maxym Mykhalchuk
+
+# Contributor(s): Maxym Mykhalchuk
 
 # public static final int VK_BACK_QUOTE 192
 #NOI18N
