--- a/websvc.design/src/org/netbeans/modules/websvc/design/view/actions/Bundle.properties
+++ b/websvc.design/src/org/netbeans/modules/websvc/design/view/actions/Bundle.properties
@@ -27,7 +27,7 @@
 #
 # The Original Software is NetBeans. The Initial Developer of the Original
 # Software is Sun Microsystems, Inc. Portions Copyright 1997-2006 Sun
-# Microsystems, Inc. All Rights Reserve
+# Microsystems, Inc. All Rights Reserved.
 
 #AddOperationAction
 LBL_AddOperation=Add Operation...
