--- a/profiler.freeform/src/org/netbeans/modules/profiler/freeform/Bundle.properties
+++ b/profiler.freeform/src/org/netbeans/modules/profiler/freeform/Bundle.properties
@@ -1,3 +1,4 @@
+# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
 # Copyright 2010 Oracle and/or its affiliates. All rights reserved.
 #
