--- a/debugger.jpda.truffle/nbproject/project.properties
+++ b/debugger.jpda.truffle/nbproject/project.properties
@@ -44,8 +44,8 @@ javac.compilerargs=-Xlint:unchecked
 javac.source=1.7
 javadoc.arch=${basedir}/arch.xml
 requires.nb.javac=true
-truffle-backend.cp.extra=external/truffle-api-0.15-20160626.192748-31.jar
-truffle.sl=external/truffle-sl-0.15-20160626.192804-31.jar
+truffle-backend.cp.extra=external/truffle-api.jar
+truffle.sl=external/truffle-sl.jar
 cp.extra=${tools.jar}:${truffle-backend.cp.extra}:${truffle.sl}
 test-unit-sys-prop.test.dir.src=${basedir}/test/unit/src/
 test-unit-sys-prop.netbeans.user=${basedir}/work/nb_user_dir
