--- a/lib.terminalemulator/examples/TermTester/nbproject/project.properties
+++ b/lib.terminalemulator/examples/TermTester/nbproject/project.properties
@@ -15,7 +15,7 @@ auxiliary.org-netbeans-modules-editor-indent.text.x-ant+xml.CodeStyle.project.ex
 auxiliary.org-netbeans-modules-editor-indent.text.x-ant+xml.CodeStyle.project.indent-shift-width=4
 auxiliary.org-netbeans-modules-editor-indent.text.x-ant+xml.CodeStyle.project.spaces-per-tab=8
 auxiliary.org-netbeans-modules-editor-indent.text.x-ant+xml.CodeStyle.project.tab-size=8
-auxiliary.org-netbeans-modules-editor-indent.text.x-java.CodeStyle.project.expand-tabs=true
+auxiliary.org-netbeans-modules-editor-indent.text.x-java.CodeStyle.project.expand-tabs=false
 auxiliary.org-netbeans-modules-editor-indent.text.x-java.CodeStyle.project.indent-shift-width=4
 auxiliary.org-netbeans-modules-editor-indent.text.x-java.CodeStyle.project.spaces-per-tab=8
 auxiliary.org-netbeans-modules-editor-indent.text.x-java.CodeStyle.project.tab-size=8
@@ -55,8 +55,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
