Initial support form multi-module projects added.

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -631,6 +631,7 @@ nb.cluster.java=\
         java.hints.ui,\
         java.j2sedeploy,\
         java.j2seembedded,\
+        java.j2semodule,\
         java.j2seplatform,\
         java.j2seprofiles,\
         java.j2seproject,\
