#267335: Update Link to Sakila Information page (mysql sample database)

--- a/db.mysql.sakila/src/org/netbeans/modules/db/mysql/sakila/Bundle.properties
+++ b/db.mysql.sakila/src/org/netbeans/modules/db/mysql/sakila/Bundle.properties
@@ -38,7 +38,7 @@
 OpenIDE-Module-Display-Category=Database
 OpenIDE-Module-Long-Description=\
     This modules plugs into the NetBeans MySQL support in the Database Explorer, making it possible to easily create the Sakila sample database from within NetBeans.\n\n\
-    For more information on Sakila see http://forge.mysql.com/wiki/SakilaSampleDB
+    For more information on Sakila see <a href="http://dev.mysql.com/doc/sakila/en/">http://dev.mysql.com/doc/sakila/en/</a>.
 OpenIDE-Module-Name=Sakila Sample Database
 OpenIDE-Module-Short-Description=Provides Sakila sample database for NetBeans MySQL support
 
