Add contrib/nbignore module to experimental cluster
So it is built during nbms-and-javadoc build.

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -1382,6 +1382,7 @@ nb.cluster.experimental=\
         contrib/loaderswitcher,\
         contrib/moduleresolver,\
         contrib/mount,\
+        contrib/nbignore,\
         contrib/nborgsourcebrowse,\
         contrib/o.jython,\
         contrib/o.jython.distro,\
